<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.forrestguice.suntimes.solunar.MainActivity">

    <item
        android:id="@+id/action_today"
        android:orderInCategory="100"
        android:title="@string/action_today"
        android:icon="?attr/icToday"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_date"
        android:orderInCategory="150"
        android:title="@string/action_date"
        android:icon="?attr/icToday"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendars"
        android:orderInCategory="175"
        android:title="@string/action_calendars"
        android:icon="?attr/icSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        android:icon="?attr/icSettings"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:title="@string/action_help"
        android:icon="?attr/icHelp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="400"
        android:title="@string/action_about"
        android:icon="?attr/icAbout"
        app:showAsAction="never" />
</menu>
