<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.forrestguice.suntimes.solunar.MainActivity">

    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:title="@string/action_calendar"
        android:icon="?attr/icToday"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="50"
        android:title="@string/action_share"
        android:icon="?attr/icShare"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_date_suntimes"
        android:orderInCategory="300"
        android:title="@string/action_date_suntimes"
        android:icon="@drawable/ic_action_suntimes"
        app:showAsAction="never" />

</menu>
